# autogen

./: .env.sample  README.md  pyproject.toml
demo/: advisor_agent.py  after_sales_agent.py  datastore.py  handlers.py  main.py  messages.py  readme.md  sales_agent.py  tools.py  triage_agent.py  user_agent.py  utils.py
demo/data/: cars.csv  cars.db
model_clients/: azure.py
notebook/: 01_intro.ipynb  02_first_agent.ipynb  03_teams.ipynb  04_Human.ipynb  05_selector_group_chat.ipynb  06_swarm.ipynb  07_memory.ipynb  08_orchestrator.ipynb  09_messaging.ipynb  10_agent_implementation.ipynb  11_direct_messaging.ipynb  12_broadcast_messaging.ipynb
